# project-bot-gpu-stock-monitor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: monitor.yml
config/: config.yaml
src/gpu_monitor/: __init__.py  alerting.py  browser.py  cli.py  config.py  db.py  discord_client.py  http_client.py  models.py  normalizer.py  scheduler.py  setup_logging.py
src/gpu_monitor/retailers/: __init__.py  alternate.py  base.py  ldlc.py  materiel_net.py  nvidia_fr.py  rueducommerce.py  topachat.py
tests/: conftest.py  test_dedupe.py  test_normalizer.py  test_parsers.py
tests/fixtures/: .gitkeep
